# narou_novel_batch

./: Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
application/: alembic.ini  command.py  log.toml  main.py  pyproject.toml
application/apis/: request.py
application/apis/narou/: narou_data.py  type.py  urls.py
application/batch/: daily_get_ranking.py  data.py  get_novel_data.py  get_ranking.py
application/command/: all_ranking.py  init_db.py
application/common/: datetime_util.py
application/config/: db.py  env.py  log.py
application/init_data/: 1.rank_type.sql  2.novel_type.sql  3.biggenre.sql  4.genre.sql  5.biggenre_genre.sql
application/migrations/: env.py
application/migrations/versions/: 0256406775ca_.py  0262e81bf4ca_.py  07fdab18fd41_.py  08f7d1c486c3_.py  14974ab6057b_.py  498a9eaf15d1_.py  4b91e6c70ca7_.py  8f38374865e2_.py  93ac550ce511_.py  9fc1dd8c5dd9_.py  aa20b703db0d_.py  ce4433ed9766_.py  cfcb3ff9d4c9_.py  d6310ca487fc_.py  d6c12aa8111c_.py  ec45656b488a_.py
application/models/: author.py  base.py  biggenre.py  biggenre_genre.py  genre.py  keyword.py  ncode_mapping.py  novel.py  novel_keywords.py  novel_type.py  rank.py  rank_type.py
application/repository/: daily_get_ranking_repository.py  get_novel_data_repository.py
application/repository/sql/daily_get_ranking_repository/: ranking_insert_ncode_mapping.sql  ranking_insert_rank.sql
application/repository/sql/get_novel_data_repository/: get_target_novel_data.sql  insert_author.sql  insert_keyword.sql  insert_novel.sql  insert_novel_keyword.sql
application/tests/: conftest.py
application/tests/apis/batch/: test_daily_get_ranking.py
application/tests/apis/narou/: test_narou_data.py  test_type.py  test_urls.py
application/tests/batch/: test_daily_get_ranking.py  test_get_novel_data.py  test_get_ranking.py
application/tests/factories/: author.py  biggenre.py  biggenre_genre.py  genre.py  keyword.py  ncode_mapping.py  novel.py  novel_keywords.py  novel_type.py  rank.py  rank_type.py
application/tests/repository/: conftest.py  test_daily_get_ranking_repository.py  test_get_novel_data_repository.py
containers/python/: Dockerfile  entrypoint.sh
